
5.7.4 (??)

Running Daikon is no longer supported on Windows or Cygwin.  Use Windows
Subsystem for Linux (WSL) instead.  You can still run a front end on
Windows to generate a trace file, but you should run Daikon on a Unix-like
system to process that trace file.

Updated the readelf, Valgrind, and BCEL libraries.  This should improve
compatibility with operating systems and C versions.

===========================================================================

5.7.2 (November 7, 2018)

The Daikon instructions no longer suggest to set CLASSPATH, which is bad
style.  Instead, a new environment variable DAIKON_CLASSPATH is set by
daikon.bashrc, if you choose to use that script.

The DAIKONDIR environment variable is not needed.  It is only used for
documentation purposes in the manual.

Daikon runs on Cygwin.  However, the Daikon developers no longer support
building Daikon on Cygwin, which requires tricky translation between
Windows and Unix paths.  If you want to develop Daikon on a computer that
runs Windows, we suggest using Linux in a virtual machine, or Linux
Subsystem for Windows (available since August 2016).

===========================================================================

5.7.0 (August 22, 2018)

Daikon now requires Java JDK 8; Java JDK 7 is no longer supported.

Implementation detail:  Daikon no longer uses the plume-lib repository, but
smaller ones such as plume-scripts.

===========================================================================

5.6.6 (July 2, 2018)

DynComp:
- Fix issue #129 - Too many parameters for an annotation method.

Fjalar/Kvasir:
- Fix issue #27 - Incorrect categorization of some SIMD instructions.

===========================================================================

5.6.4 (April 3, 2018)

Eliminate reliance on plume.jar file, in favor of smaller libraries
(checklink, html-tools, options, plume-util, etc.).

Fjalar/Kvasir:
- We updated the underlying Binutils infrastructure to version 2.30.
