@@ -84,7 +84,6 @@ script:
        cd $THIS_REPO
        git checkout -qf $TRAVIS_COMMIT
      fi &&
-     export JAVA_HOME=\`which javac|xargs readlink -f|xargs dirname|xargs dirname\` &&
      java -version &&
      javac -version &&
      export TRAVIS=$TRAVIS &&
