@@ -8,8 +8,6 @@ set -o verbose
 set -o xtrace
 export SHELLOPTS
 
-export JAVA_HOME=${JAVA_HOME:-`which javac|xargs readlink -f|xargs dirname|xargs dirname`}
-
 make showvars
 make compile daikon.jar
 
